INTYGFV-16326: Implementation of api/certificate/{certificateId} that retrieves certificates. (#83)
Co-authored-by: Matias Wurschmidt-Wang <matias.wurschmidt@soprasteria.com>